# piqtree2

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  README.md  changelog.md  doc_rsrc.py  example_usage.ipynb  exception.patch  fpic-iqtree.patch  mkdocs.yml  noxfile.py  pyproject.toml  rtd_get_docs.py  setup.py
.devcontainer/: DockerFile  devcontainer.json
.github/: dependabot.yml
.github/actions/: build-iqtree.yml
.github/actions/build-iqtree/: action.yml
.github/actions/setup-piqtree/: action.yml
.github/workflow_trials/: build.yml  ci.yml
.github/workflows/: build.yml  build_container.yml  build_docs.yml  build_iqtree.yml  build_wheels.yml  ci.yml  release.yml  type_check.yml
build_tools/: before_all_linux.sh  before_all_mac.sh  build_iqtree.sh
changelog.d/: 20240730_123257_1835007+khiron_scriv.md  20241213_052520_robert.mcarthur.md
docs/: app_pipeline.py  available_help.py  citation.md  fit_tree.py  index.md  model_finder.py  options.py  phylo.py
docs/api/: build_tree.md  index.md  jc_distances.md  model.md  random_trees.md
docs/api/genetic_distance/: jc_distances.md
docs/api/model/: FreqType.md  Model.md  ModelFinderResult.md  RateModel.md  SubstitutionModel.md  make_model.md  model_finder.md
docs/api/tree/: build_tree.md  fit_tree.md  nj_tree.md  random_trees.md
docs/api/tree_distance/: robinson_foulds.md
docs/apps/: app_pipeline.py  available_help.py  fit_tree.py  model_finder.py  nj.py  options.py  pairwise_dist.py  phylo.py
docs/quickstart/: calculate_jc_distances.md  calculate_rf_distances.md  construct_ml_tree.md  construct_nj_tree.md  fit_tree_topology.md  index.md  make_random_trees.md  using_model_finder.md  using_substitution_models.md
nbks/: working.ipynb
piqtree2/: __init__.py  wrapper.cpp
pyiqtree/: __init__.py  bindings.cpp  wrapper.cpp
pyiqtree/libiqtree/: README.md
pyiqtree/libiqtree/linux/: Makefile  symbols.txt  wrapper.cpp
src/piqtree/: __init__.py  _data.py  exceptions.py
src/piqtree/_app/: __init__.py
src/piqtree/_libiqtree/: _piqtree.cpp
src/piqtree/iqtree/: __init__.py  _decorator.py  _jc_distance.py  _model_finder.py  _random_tree.py  _robinson_foulds.py  _tree.py
src/piqtree/model/: __init__.py  _model.py  _options.py  _rate_type.py  _substitution_model.py
src/piqtree2/: __init__.py  _app.py  _data.py  _decorators.py  _iq_wrappers.py  _options.py  _piqtree2.cpp  _version.py  exceptions.py
src/piqtree2/_app/: __init__.py
src/piqtree2/_libiqtree/: README.txt  _piqtree2.cpp
src/piqtree2/iqtree/: __init__.py  _decorator.py  _decorators.py  _jc_distance.py  _model_finder.py  _modelfinder.py  _random_tree.py  _robinson_foulds.py  _tree.py
src/piqtree2/model/: __init__.py  _freq_type.py  _model.py  _options.py  _rate_type.py  _substitution_model.py
src/piqtree2/models/: __init__.py  _options.py
tests/: conftest.py  test_RF_distance.py  test_app.py  test_build_tree.py  test_data.py  test_fit_tree.py  test_generate_random_tree_file.py  test_options.py  test_phylogenetic_analysis.py  test_random_trees.py  test_segmentation_fault.py
tests/test_app/: test_app.py  test_pickle.py
tests/test_iqtree/: test_build_tree.py  test_distance.py  test_fit_tree.py  test_model_finder.py  test_nj_tree.py  test_random_trees.py  test_robinson_foulds.py  test_segmentation_fault.py  test_tree_yaml.py
tests/test_model/: test_freq_type.py  test_model.py  test_options.py  test_rate_type.py  test_substitution_model.py
working/testPIC/: Makefile  test.cpp  test.h  test.py  withoutpic.cpp  withoutpic.h  wrap.cpp  wrap.h
